--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.6",
+    "@prisma/client": "^6.5.0",
+    "lucia": "^3.2.2",
     "next": "15.2.4",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
